✨ feat: Apply COVER and Genres
